--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
       <div class="row">
         <form class="col s12" name="initial-configuration-form" role="form" onsubmit="checkInitialConfiguration();" action="javascript: return false;">
           <div class="row">
-            <div class="input-field col s6">
+            <div class="input-field col s12 m6">
               <input id="people_number" type="number" min="2" class="validate">
               <label for="first_name">How many people?</label>
             </div>
-            <div class="input-field col s6">
+            <div class="input-field col s12 m6">
               <input id="team_number" type="number" min="2" class="validate">
               <label for="last_name">How many teams?</label>
             </div>
           </div>
-          <button class="btn waves-effect waves-light" type="submit" name="action">Continue</button>
+          <button class="btn waves-effect waves-light" type="submit" name="action">Let's write names!</button>
         </form>
       </div>
+      <div id="people_configuration"></div>
+      <div id="result"></div>
     </div>
-    <div id="people_configuration"></div>
-    <div id="result"></div>
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/check.js"></script>
