--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/randomator.css"  media="screen,projection"/>
+    <link href="img/icon.png" rel="icon" sizes="192x192">
     <title>Randomator</title>
   </head>
   <body>
