--- a/index.html
+++ b/index.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#d32f2f">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link type="text/css" rel="stylesheet" href="css/randomator.css"  media="screen,projection"/>
+    <link href="img/icon.png" rel="icon" sizes="192x192">
+    <title>Randomator</title>
+    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create', 'UA-85962503-1', 'auto');ga('send', 'pageview');</script>
   </head>
   <body>
     <div class="container">
       <h1>Randomator</h1>
-      <h2>Initial configuration</h2>
-      <div class="row">
-        <form class="col s12" name="initial-configuration-form" role="form" onsubmit="checkInitialConfiguration();" action="javascript: return false;">
-          <div class="row">
-            <div class="input-field col s12 m6">
-              <input id="people-number" type="number" min="2" class="validate">
-              <label for="first-name">How many people?</label>
+      <div class="divider"></div>
+      <div class="section" id="initial-configuration">
+        <h2>Initial configuration</h2>
+        <div class="row">
+          <form class="col s12" name="initial-configuration-form" role="form" onsubmit="checkInitialConfiguration();" action="javascript: return false;">
+            <div class="row">
+              <div class="input-field col s12 m6">
+                <input id="people-number" type="number" min="2" class="validate">
+                <label for="first-name">How many people?</label>
+              </div>
+              <div class="input-field col s12 m6">
+                <input id="team-number" type="number" min="2" class="validate">
+                <label for="last-name">How many teams?</label>
+              </div>
             </div>
-            <div class="input-field col s12 m6">
-              <input id="team-number" type="number" min="2" class="validate">
-              <label for="last-name">How many teams?</label>
-            </div>
-          </div>
-          <button class="btn waves-effect waves-light" type="submit" name="action">Let's write names!</button>
-          <button class="btn waves-effect waves-teal btn-flat" type="button" name="action" onclick="clearResults();">Reset</button>
-        </form>
+            <button class="btn waves-effect waves-light" type="submit" name="action">Let's write names!</button>
+            <button class="btn waves-effect waves-teal btn-flat" type="button" name="action" onclick="clearResults();">Reset</button>
+          </form>
+        </div>
       </div>
-      <div id="people-configuration"></div>
-      <div id="teams-result"></div>
+      <div class="section" id="people-configuration"></div>
+      <div class="section" id="teams-result"></div>
+      <div class="section" id="contact">
+        <div class="divider"></div>
+        <blockquote>You can download the code from <a href="http://github.com/fblupi/Randomator">GitHub</a> and contact with me on <a href="http://twitter.com/fblupi">Twitter</a> or by <a href="mailto:fboli94@gmail.com?subject=Feedback%20Encryptator">email</a>.</blockquote>
+      </div>
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
