Fixed return false error

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="section" id="initial-configuration">
         <h2>Initial configuration</h2>
         <div class="row">
-          <form class="col s12" name="initial-configuration-form" role="form" onsubmit="checkInitialConfiguration();" action="javascript: return false;">
+          <form class="col s12" name="initial-configuration-form" role="form" onsubmit="checkInitialConfiguration();" action="return false;">
             <div class="row">
               <div class="input-field col s12 m6">
                 <input id="people-number" type="number" min="2" class="validate">
