Fixed return false errors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="section" id="initial-configuration">
         <h2>Initial configuration</h2>
         <div class="row">
-          <form class="col s12" name="initial-configuration-form" role="form" onsubmit="checkInitialConfiguration();" action="javascript: return false;">
+          <form class="col s12" name="initial-configuration-form" role="form" onSubmit="checkInitialConfiguration(); return false;">
             <div class="row">
               <div class="input-field col s12 m6">
                 <input id="people-number" type="number" min="2" class="validate">
@@ -30,8 +30,8 @@
                 <label for="last-name">How many teams?</label>
               </div>
             </div>
-            <button class="btn waves-effect waves-light" type="submit" name="action">Let's write names!</button>
-            <button class="btn waves-effect waves-teal btn-flat" type="button" name="action" onclick="clearResults();">Reset</button>
+            <button class="btn waves-effect waves-light" type="submit">Let's write names!</button>
+            <button class="btn waves-effect waves-teal btn-flat" type="button" onclick="clearResults();">Reset</button>
           </form>
         </div>
       </div>
