--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <blockquote>You can download the code from <a href="http://github.com/fblupi/Randomator">GitHub</a> and contact with me on <a href="http://twitter.com/fblupi">Twitter</a> or by <a href="mailto:fboli94@gmail.com?subject=Feedback%20Encryptator">email</a>.</blockquote>
       </div>
     </div>
+    <script src="js/FileSaver.min.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/randomator.js"></script>
