--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="section" id="teams-result"></div>
       <div class="section" id="contact">
         <div class="divider"></div>
-        <blockquote>You can download the code from <a href="http://github.com/fblupi/Randomator">GitHub</a> and contact with me on <a href="http://twitter.com/fblupi">Twitter</a> or by <a href="mailto:fboli94@gmail.com?subject=Feedback%20Encryptator">email</a>.</blockquote>
+        <blockquote>You can download the code from <a href="http://github.com/fblupi/Randomator">GitHub</a> and contact with me on <a href="http://twitter.com/fblupi">Twitter</a> or by <a href="mailto:franciscojavierbolivarlupianez@gmail.com?subject=Feedback%20Encryptator">email</a>.</blockquote>
       </div>
     </div>
     <script src="js/FileSaver.min.js"></script>
