--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#d32f2f">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/randomator.css"  media="screen,projection"/>
     <link href="img/icon.png" rel="icon" sizes="192x192">
